tests/paczka1/small_fuzzy/43246100.err
Error in line 2: 1o8k8 S358 59,8
Error in line 6: 5GRoUmU6r S380 17,8
Error in line 5: 6yRd3f S380 5,9
